# jijin-show

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  etf.html  flows.html  heatmap.html  index.html  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: data-sources.example.yaml
data/: README.md
docs/: cloudflare-pages.md  data-assets.md  data-sources.md  deployment.md  development.md  etf-mapping.md  etf-realtime-quotes.md  etf-risk-filtering.md  etf-watchlist-filters.md  heatmap-mvp.md  ingestion-plan.md  no-mock-and-overseas-sources.md
functions/api/: [[path]].js
scripts/: run_collect.py  smoke-test.sh
server/: Dockerfile  README.md  main.py  overseas_main.py  requirements.txt
src/: api-status.css  config.js  data-mode-status.js  etf-quotes.css  etf.js  flows.js  heatmap-mobile.css  main.js  mobile-pages.css  mobile-safe.css  overview.css  overview.js  realtime.css  responsive.css  styles.css
src/data/: etf-map.js  mock-sectors.js
src/jijin_show/: __init__.py  cli.py  config.py  models.py
src/jijin_show/collectors/: akshare_collector.py
src/jijin_show/exporters/: __init__.py  frontend_json.py
src/jijin_show/normalizers/: common.py  flow.py  fund.py
src/jijin_show/signals/: __init__.py  sector.py
src/jijin_show/storage/: duckdb_store.py
src/services/: sector-api.js
