[project]
name = "jijin-show"
version = "0.1.0"
description = "Fund market overview and capital flow data toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "akshare>=1.15.0",
  "pandas>=2.0.0",
  "duckdb>=1.0.0",
  "pyyaml>=6.0.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "pytest>=8.0.0",
]
backup = [
  "efinance>=0.5.0",
]

[project.scripts]
jijin-show = "jijin_show.cli:app"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
